@@ -1,2 +1,12 @@
 # progmeth_2023_project
-Final project for Programming Methodology class
+Final project for Programming Methodology Class 2023
+- Mainly focused on Object-oriented programming (OOP)
+- Implementation of javaFX and GUI
+
+Requirements
+- javafx-sdk-22 (Available online)
+- Final_Project.jar (Download from this repository)
+
+Running jar file
+1. Acquire all requirement files
+2. run "java -jar <path> <filename.jar> --module-path <javafx-sdk-22 folder path>/lib --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.media"
